tests/algorithms/x/Pascal/physics/casimir_effect.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/algorithms/x/Pascal/physics/casimir_effect.pas
fgl.pp(1668,8) Note: Call to subroutine "function TFPGMap<System.ShortString,System.Variant>.IndexOf(const AKey:ShortString):LongInt;" marked as inline is not inlined
casimir_effect.pas(45,20) Note: Call to subroutine "function TFPGMap<System.ShortString,System.Variant>.GetKey(Index:LongInt):ShortString;" marked as inline is not inlined
casimir_effect.pas(47,20) Note: Call to subroutine "function TFPGMap<System.ShortString,System.Variant>.GetData(Index:LongInt):Variant;" marked as inline is not inlined
fgl.pp(1668,8) Note: Call to subroutine "function TFPGMap<System.ShortString,System.Real>.IndexOf(const AKey:ShortString):LongInt;" marked as inline is not inlined
casimir_effect.pas(73,3) Note: Call to subroutine "procedure TFPGMap<System.ShortString,System.Real>.AddOrSetData(const AKey:ShortString;const AData:Real);" marked as inline is not inlined
casimir_effect.pas(73,59) Note: Call to subroutine "operator :=(const source:Variant):Double;" marked as inline is not inlined
casimir_effect.pas(73,59) Note: Call to subroutine "operator :=(const source:Real):Variant;" marked as inline is not inlined
casimir_effect.pas(78,3) Note: Call to subroutine "procedure TFPGMap<System.ShortString,System.Real>.AddOrSetData(const AKey:ShortString;const AData:Real);" marked as inline is not inlined
casimir_effect.pas(78,55) Note: Call to subroutine "operator :=(const source:Variant):Double;" marked as inline is not inlined
casimir_effect.pas(78,55) Note: Call to subroutine "operator :=(const source:Real):Variant;" marked as inline is not inlined
casimir_effect.pas(83,3) Note: Call to subroutine "procedure TFPGMap<System.ShortString,System.Real>.AddOrSetData(const AKey:ShortString;const AData:Real);" marked as inline is not inlined
casimir_effect.pas(83,56) Note: Call to subroutine "operator :=(const source:Variant):Double;" marked as inline is not inlined
casimir_effect.pas(83,56) Note: Call to subroutine "operator :=(const source:Real):Variant;" marked as inline is not inlined
casimir_effect.pas(153,37) Error: Incompatible type for arg no. 1: Got "TFPGMap<System.ShortString,System.Real>", expected "TFPGMap<System.ShortString,System.Variant>"
casimir_effect.pas(154,47) Error: Incompatible type for arg no. 1: Got "TFPGMap<System.ShortString,System.Real>", expected "TFPGMap<System.ShortString,System.Variant>"
casimir_effect.pas(155,50) Error: Incompatible type for arg no. 1: Got "TFPGMap<System.ShortString,System.Real>", expected "TFPGMap<System.ShortString,System.Variant>"
casimir_effect.pas(173) Fatal: There were 3 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
